# home-mate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  cli.py  errors.py  extensions.py  filters.py  forms.py  logging_utils.py  models.py  scheduler.py
app/blueprints/: assets.py  auth.py  files.py  main.py  tasks.py
app/static/: style.css
app/templates/: _macros.html  base.html
app/templates/assets/: _table.html  form.html  list.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: index.html
app/templates/errors/: 404.html  500.html
app/templates/tasks/: _table.html  form.html  list.html
app/utils/: dates.py  storage.py
migrations/: alembic.ini  env.py
migrations/versions/: 20251108_013735_initial.py  301b0fd2d7f8_add_users_and_ownership.py  a76191c02132_add_task_asset_indexes.py  f82a3a3b764f_add_attachments.py
scripts/: seed_data.py
